with two changes in html, resubmission

--- a/Index.html
+++ b/Index.html
@@ -107,31 +107,33 @@
         </div>
 
         <div class="row work">
-            <h1>Featured Work</h1>
-
+            <!--Below "div" with "col" class added as was required by reviewer, instead of suggested col-sm-4, I made it "col-sm-6" because it renders better :)-->
+            <div class="col-sm-6">
+                <h1>Featured Work</h1>
+            </div>
         </div>
-        <div class="row">
-            <section class="sect">
-                <div class="col-sm-4">
-                    <img class="col-sm-12 pict" src="img/javascriptGame.png" alt="Puzzle">
-                    <h1 class="apple-name"> Puzzle</h1>
-                    <h4 class="git"><a href="">https://github.com/udacity/puzzle</a></h4>
-                </div>
-                <div class="col-sm-4">
-                    <img class="col-sm-12 pict" src="img/blog.jpg" alt="Blog">
-                    <h1 class="sunflower-name"> Blog</h1>
-                    <h4 class="git"><a href="">https://github.com/udacity/blog</a></h4>
-                </div>
-                <div class="col-sm-4">
-                    <img class="col-sm-12 pict" src="img/university.jpg" alt="University">
-                    <h1 class="bokeh-name"> University</h1>
-                    <h4 class="git"><a href="">https://github.com/udacity/university</a></h4>
-                </div>
+        <!-- "row" class was added to "section" as it was suggested by reviewer-->
+        <section class="sect row">
+            <div class="col-sm-4">
+                <img class="col-sm-12 pict" src="img/javascriptGame.png" alt="Puzzle">
+                <h1 class="apple-name"> Puzzle</h1>
+                <h4 class="git"><a href="">https://github.com/udacity/puzzle</a></h4>
+            </div>
+            <div class="col-sm-4">
+                <img class="col-sm-12 pict" src="img/blog.jpg" alt="Blog">
+                <h1 class="sunflower-name"> Blog</h1>
+                <h4 class="git"><a href="">https://github.com/udacity/blog</a></h4>
+            </div>
+            <div class="col-sm-4">
+                <img class="col-sm-12 pict" src="img/university.jpg" alt="University">
+                <h1 class="bokeh-name"> University</h1>
+                <h4 class="git"><a href="">https://github.com/udacity/university</a></h4>
+            </div>
 
 
-            </section>
+        </section>
 
-        </div>
+
 
     </div>
 
